--- a/src/libcommonserver/CMakeLists.txt
+++ b/src/libcommonserver/CMakeLists.txt
@@ -165,7 +165,7 @@ else()
     include(ConanGetLibDirs)
     get_library_dirs("OpenSSL" "openssl")
     get_library_dirs("xxHash" "xxhash")
-    file(COPY
+    file(INSTALL
             # xxHash
             "${_xxHash_LIB_DIRS}/libxxhash.so"
             "${_xxHash_LIB_DIRS}/libxxhash.so.0"
