--- a/src/libsyncengine/CMakeLists.txt
+++ b/src/libsyncengine/CMakeLists.txt
@@ -22,8 +22,7 @@ set(syncengine_SRCS
     login/login.h login/login.cpp
     # Jobs
     jobs/jobmanager.h jobs/jobmanager.cpp
-    jobs/jobmanagerdata.h jobs/jobmanagerdata.cpp
-    jobs/abstractjob.h jobs/abstractjob.cpp
+    jobs/jobmanagerdata.h jobs/jobmanagerdata.cpp jobs/abstractjob.h jobs/abstractjob.cpp jobs/syncjob.h
     jobs/abstractpropagatorjob.h
     ## Network jobs
     jobs/network/networkjobsparams.h jobs/network/networkjobsparams.cpp
