fix(action.yml): ensure platforms directory is created for Qt dependencies
Updated the action.yml script to create the platforms directory for Qt dependencies using a more robust method. This change ensures that the directory is created if it does not exist, preventing potential errors during the dependency copying process.

--- a/.github/actions/build_linux_amd/action.yml
+++ b/.github/actions/build_linux_amd/action.yml
@@ -129,8 +129,8 @@ runs:
                 -exec cp {} ./dependencies/ \; \
                 -exec echo "Conan dependency found -> " {} \;
               if [[ "$dir" == *"/qt"* ]]; then
-                mkdir dependencies/platforms
-                find "$dir" \
+                mkdir -p ./dependencies/platforms
+                find "$dir/../plugins/platforms" \
                   '(' -iname 'libqoffscreen.so' ')' \
                   -exec cp {} ./dependencies/platforms/ \; \
                   -exec echo "Conan Qt dependency found -> " {} \;
