--- a/.github/actions/build_macos/action.yml
+++ b/.github/actions/build_macos/action.yml
@@ -80,9 +80,10 @@ runs:
                 -exec cp {} ./dependencies/ \; \
                 -exec echo "Conan dependency found -> " {} \;
               if [[ "$dir" == *"/qt"* ]]; then
-                mkdir dependencies/platforms
+                
                 find "$dir" \
                     '(' -iname 'libqoffscreen.dylib' ')' \
+                    -exec mkdir -p .dependencies/platforms \; \
                     -exec cp {} ./dependencies/platforms/ \; \
                     -exec echo "Conan Qt dependency found -> " {} \;
               fi
