--- a/.github/actions/build_windows/action.yml
+++ b/.github/actions/build_windows/action.yml
@@ -85,8 +85,6 @@ runs:
           cp "${{ github.workspace }}/build-windows/install/bin/sync-exclude.lst" ./dependencies/
           cp "${{ github.workspace }}/build-windows/install/bin/*.dll" ./dependencies/
           cp "C:\Program Files (x86)\Sentry-Native\bin\crashpad_handler.exe" ./dependencies/
-          mkdir .\dependencies\platforms
-          cp "C:\Qt\6.2.3\msvc2019_64\plugins\platforms\qoffscreen.dll" .\dependencies\platforms
           cp "C:\Program Files (x86)\cppunit\lib\cppunit_dll.dll" ./dependencies/
         shell: powershell
         if: steps.build.outcome == 'success'
@@ -96,11 +94,12 @@ runs:
         shell: powershell
         run: |
           $conanRunBat = Get-ChildItem -Path "${{ github.workspace }}" -Recurse -Filter "conanrun.bat" | Select-Object -First 1
-          
           if ($conanRunBat) {
             Write-Host "Sourcing $($conanRunBat.FullName)"
             cmd /c `"$($conanRunBat.FullName)`"  # modifie l'environnement du shell cmd
           }
+          
+          New-Item -ItemType Directory -Path "./dependencies/platforms" -Force
           
           $patterns = @("libxxhash*.dll", "liblog4cplus*.dll", "libssl*.dll", "libcrypto*.dll", "Qt6Widgets.dll", "Qt6Gui.dll", "Qt6Network.dll", "Qt6Sql.dll", "Qt6Core.dll", "Qt6DBus.dll", "Qt6Svg.dll", "qoffscreen.dll")
           $paths = $env:PATH -split ';' | Where-Object { $_ -like '*\.conan2\p*' }
