fix(action.yml): update path for Qt plugin dependencies
Modified the path in the action.yml file to correctly locate the Qt plugin dependencies, ensuring that the necessary libraries are copied to the appropriate directory.

--- a/.github/actions/build_macos/action.yml
+++ b/.github/actions/build_macos/action.yml
@@ -81,7 +81,7 @@ runs:
                 -exec echo "Conan dependency found -> " {} \;
               if [[ "$dir" == *"/qt"* ]]; then
                 
-                find "$dir" \
+                find "$dir/../plugins/platforms" \
                     '(' -iname 'libqoffscreen.dylib' ')' \
                     -exec mkdir -p .dependencies/platforms \; \
                     -exec cp {} ./dependencies/platforms/ \; \
