fix(action.yml): add logging for dependencies in build process
Added logging statements to output the names of dependencies and platform dependencies during the build process. This will help in debugging and verifying that the correct dependencies are being used.

--- a/.github/actions/build_windows/action.yml
+++ b/.github/actions/build_windows/action.yml
@@ -121,6 +121,8 @@ runs:
               }
             }
           }
+          ls ./dependencies/ | ForEach-Object { Write-Host "Dependency: $($_.Name)" }
+          ls ./dependencies/platforms/ | ForEach-Object { Write-Host "Platform Dependency: $($_.Name)" }
       - name: Upload build common files
         uses: actions/upload-artifact@v4
         with:
