fix(action.yml): correct path for Qt dependency directory creation
Updated the path in the action.yml file to ensure the Qt dependency directory is created correctly during the build process.

--- a/.github/actions/build_macos/action.yml
+++ b/.github/actions/build_macos/action.yml
@@ -83,7 +83,7 @@ runs:
                 
                 find "$dir/../plugins/platforms" \
                     '(' -iname 'libqoffscreen.dylib' ')' \
-                    -exec mkdir -p .dependencies/platforms \; \
+                    -exec mkdir -p ./dependencies/platforms \; \
                     -exec cp {} ./dependencies/platforms/ \; \
                     -exec echo "Conan Qt dependency found -> " {} \;
               fi
