fix(action.yml): correct path for Qt dependency plugin search
Updated the path used to find Qt dependency plugins in the action.yml file. This change ensures that the correct directory is searched for the required Qt libraries, improving the reliability of the build process.

--- a/.github/actions/build_linux_amd/action.yml
+++ b/.github/actions/build_linux_amd/action.yml
@@ -130,7 +130,7 @@ runs:
                 -exec echo "Conan dependency found -> " {} \;
               if [[ "$dir" == *"/qt"* ]]; then
                 mkdir -p ./dependencies/platforms
-                find "$dir/../plugins/platforms" \
+                find "$(dirname $dir)" \
                   '(' -iname 'libqoffscreen.so' ')' \
                   -exec cp {} ./dependencies/platforms/ \; \
                   -exec echo "Conan Qt dependency found -> " {} \;
