fix(action.yml): improve dependency logging for DLL files
Updated the dependency logging mechanism to recursively search for DLL files in the dependencies directory and log their full names. This change enhances visibility into the dependencies being used in the build process.

--- a/.github/actions/build_windows/action.yml
+++ b/.github/actions/build_windows/action.yml
@@ -125,8 +125,12 @@ runs:
               }
             }
           }
-          ls ./dependencies/ | ForEach-Object { Write-Host "Dependency: $($_.Name)" }
-          ls ./dependencies/platforms/ | ForEach-Object { Write-Host "Platform Dependency: $($_.Name)" }
+          
+          ls -Recursive ./dependencies | ForEach-Object {
+            if ($_.Name -like "*.dll") {
+              Write-Host "Dependency found: $($_.FullName)"
+            }
+          }
       - name: Upload build common files
         uses: actions/upload-artifact@v4
         with:
