--- a/.github/actions/build_windows/action.yml
+++ b/.github/actions/build_windows/action.yml
@@ -105,7 +105,6 @@ runs:
           
           $patterns = @("libxxhash*.dll", "liblog4cplus*.dll", "libssl*.dll", "libcrypto*.dll", "Qt6Widgets.dll", "Qt6Gui.dll", "Qt6Network.dll", "Qt6Sql.dll", "Qt6Core.dll", "Qt6DBus.dll", "Qt6Svg.dll", "qoffscreen.dll")
           $paths = $env:PATH -split ';' | Where-Object { $_ -like '*\.conan2\p*' }
-          Write-Host "Conan paths found: $($paths -join ', ')" # TODO delete
           foreach ($dir in $paths) {
             if ($pattern -eq "qoffscreen.dll") {
               $searchDir = Split-Path -Parent $dir
@@ -114,6 +113,7 @@ runs:
               $searchDir = $dir
               $destination = "./dependencies/"
             }
+            Write-Host "Searching in $searchDir for patterns: $($patterns -join ', ')"
             if (Test-Path $searchDir) {
               Write-Host "Looking in $searchDir"
               foreach ($pattern in $patterns) {
