fix(action.yml): correct PowerShell command for recursive listing
Updated the PowerShell command from 'ls -Recursive' to 'ls -Recurse' for proper functionality in the dependency search process.

--- a/.github/actions/build_windows/action.yml
+++ b/.github/actions/build_windows/action.yml
@@ -125,7 +125,7 @@ runs:
             }
           }
           
-          ls -Recursive ./dependencies | ForEach-Object {
+          ls -Recurse ./dependencies | ForEach-Object {
             if ($_.Name -like "*.dll") {
               Write-Host "Dependency found: $($_.FullName)"
             }
