fix(action.yml): update search directory for dependency patterns
Adjusted the search logic to correctly reference the directory being searched for patterns, ensuring accurate detection of required DLLs in the specified paths.

--- a/.github/actions/build_windows/action.yml
+++ b/.github/actions/build_windows/action.yml
@@ -106,9 +106,8 @@ runs:
           $patterns = @("libxxhash*.dll", "liblog4cplus*.dll", "libssl*.dll", "libcrypto*.dll", "Qt6Widgets.dll", "Qt6Gui.dll", "Qt6Network.dll", "Qt6Sql.dll", "Qt6Core.dll", "Qt6DBus.dll", "Qt6Svg.dll", "qoffscreen.dll")
           $paths = $env:PATH -split ';' | Where-Object { $_ -like '*\.conan2\p*' }
           foreach ($dir in $paths) {
-            Write-Host "Searching in $searchDir for patterns: $($patterns -join ', ')"
-            if (Test-Path $searchDir) {
-              Write-Host "Looking in $searchDir"
+            Write-Host "Searching in $dir for patterns: $($patterns -join ', ')"
+            if (Test-Path $dir) {
               foreach ($pattern in $patterns) {
                 if ($pattern -eq "qoffscreen.dll") {
                   $searchDir = Split-Path -Parent $dir
