--- a/.github/actions/build_macos/action.yml
+++ b/.github/actions/build_macos/action.yml
@@ -72,7 +72,9 @@ runs:
           for dir in "${dirs[@]}"; do
             if [[ "$dir" == *".conan2/p"* ]]; then
               echo "Looking in $dir"
+              # We skip the dSYM directories to avoid copying debug symbols and copy only the necessary libraries (Ex: '/Users/runner/.conan2/p/b/sentr<hash>/p/lib/libsentry.dylib.dSYM/Contents/Resources/DWARF/libsentry.dylib')
               find "$dir" \
+                  -path '*/.dSYM/*' -prune -o \
                   '(' -iname 'libxxhash.0.dylib' \
                    -o -iname 'liblog4cplus*.dylib' \
                    -o -iname 'libsentry.dylib' \
@@ -90,7 +92,7 @@ runs:
             fi
           done
           
-          echo "\nSearching executables in PATH..."
+          echo "Searching executables in PATH..."
           IFS=':' read -ra dirs <<< "$PATH
           for dir in "${dirs[@]}"; do
             if [[ "$dir" == *".conan2/p"* ]]; then
