feat(conanfile): integrate Sentry with crashpad support
Added Sentry integration to the Conan configuration, enabling crashpad as the backend. Updated cache variables to include the CMAKE_PREFIX_PATH for Qt packages.

--- a/.github/actions/build_windows/action.yml
+++ b/.github/actions/build_windows/action.yml
@@ -75,7 +75,7 @@ runs:
           mkdir dependencies
           cp "${{ github.workspace }}/build-windows/install/bin/*.dll" ./dependencies/
           cp "${{ github.workspace }}/build-windows/install/bin/sync-exclude.lst" ./dependencies/
-          cp "C:\Program Files (x86)\Sentry-Native\bin\crashpad_handler.exe" ./dependencies/
+          cp "C:\Program Files (x86)\Sentry-Native\bin\crashpad_handler.exe" ./dependencies/ # TODO
           cp "C:\Program Files (x86)\cppunit\lib\cppunit_dll.dll" ./dependencies/
         shell: powershell
         if: steps.build.outcome == 'success'
