fix(action.yml): correct syntax for reading PATH variable
Fixed a syntax error in the action.yml file where the PATH variable was not properly enclosed in quotes. This change ensures that the script correctly reads the executables in the specified directories.

--- a/.github/actions/build_macos/action.yml
+++ b/.github/actions/build_macos/action.yml
@@ -112,7 +112,7 @@ runs:
           done
           
           echo "Searching executables in PATH..."
-          IFS=':' read -ra dirs <<< "$PATH
+          IFS=':' read -ra dirs <<< "$PATH"
           for dir in "${dirs[@]}"; do
             if [[ "$dir" == *".conan2/p"* ]]; then
               echo "Looking in $dir"
