fix(action.yml): update script source path for Linux build
Changed the source path in the action.yml file to correctly reference the deactivate_conanrun.sh script for the Linux build environment.

--- a/.github/actions/build_linux_amd/action.yml
+++ b/.github/actions/build_linux_amd/action.yml
@@ -139,7 +139,7 @@ runs:
             fi
           done
 
-          source $(find "${{ github.workspace }}/build-macos" -name deactivate_conanrun.sh | head -n 1)
+          source $(find "${{ github.workspace }}/build-linux" -name deactivate_conanrun.sh | head -n 1)
         shell: bash
         if: steps.build.outcome == 'success'
 
