fix(action.yml): remove Sentry library from dependencies
Removed the Sentry library from the dependencies copy commands in the action.yml file to streamline the build process and avoid unnecessary library inclusion.

--- a/.github/actions/build_linux_amd/action.yml
+++ b/.github/actions/build_linux_amd/action.yml
@@ -93,7 +93,6 @@ runs:
           cp /usr/local/lib/libPocoNetSSL* ./dependencies/
           cp /usr/local/lib/libPocoCrypto* ./dependencies/
           cp /usr/local/lib/libPocoNet* ./dependencies/
-          cp /usr/local/lib/libsentry* ./dependencies/
           cp /usr/local/lib/libzip* ./dependencies/
           cp /usr/lib/x86_64-linux-gnu/libglib* ./dependencies/
           cp /usr/lib/x86_64-linux-gnu/libsecret* ./dependencies/
@@ -116,7 +115,7 @@ runs:
                 -o -iname 'liblog4cplus*.so.*' \
                 -o -iname 'libssl*.so*' \
                 -o -iname 'libcrypto*.so*' \
-                -o -iname 'libsentry.*' \
+                -o -iname 'libsentry*.so*' \
                 -o -iname 'libQt6Widgets*.so*' \
                 -o -iname 'libQt6Gui*.so*' \
                 -o -iname 'libQt6Network*.so*' \
