--- a/.github/actions/build_windows/action.yml
+++ b/.github/actions/build_windows/action.yml
@@ -114,12 +114,31 @@ runs:
               }
             }
           }
+
+      - name:  Fetch kDrive dependencies (lst and vfs lib)
+        run: |
+          mkdir uncached_dependencies
+          cp "${{ github.workspace }}/build-windows/install/bin/sync-exclude.lst" ./uncached_dependencies/
+          cp "${{ github.workspace }}/build-windows/install/bin/kDrivecommonserver_vfs_win.dll" ./uncached_dependencies/
+        shell: powershell
+        if: steps.build.outcome == 'success'
+
       - name: Upload build common files
         uses: actions/upload-artifact@v4
         with:
           name: windows-build-common-files
           path: |
               ./dependencies/*
+          retention-days: 1
+          compression-level: 0
+        if: steps.build.outcome == 'success'
+
+      - name: Upload uncached build common files
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-build-common-files-uncached
+          path: |
+              ./uncached_dependencies/*
           retention-days: 1
           compression-level: 0
         if: steps.build.outcome == 'success'
