--- a/.github/actions/build_linux_amd/action.yml
+++ b/.github/actions/build_linux_amd/action.yml
@@ -135,11 +135,27 @@ runs:
         shell: bash
         if: steps.build.outcome == 'success'
 
+      - name:  Fetch kDrive dependencies (.lst)
+        run: | 
+          mkdir uncached_dependencies
+          cp ${{ github.workspace }}/build-linux/build/bin/sync-exclude.lst ./uncached_dependencies/
+        shell: bash
+        if: steps.build.outcome == 'success'
+
       - name: Upload build common files
         uses: actions/upload-artifact@v4
         with:
           name: linux-build-common-files
           path: ./dependencies/
+          retention-days: 1
+          compression-level: 0
+        if: steps.build.outcome == 'success'
+     
+      - name: Upload uncached build common files
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-build-common-files-uncached
+          path: ./uncached_dependencies/
           retention-days: 1
           compression-level: 0
         if: steps.build.outcome == 'success'
