--- a/.github/actions/build_macos/action.yml
+++ b/.github/actions/build_macos/action.yml
@@ -79,7 +79,7 @@ runs:
           cp /usr/local/lib/libzstd.1.dylib ./dependencies/
           cp ${{ github.workspace }}/build-macos/client/bin/crashpad_handler ./dependencies/
           cp ${{ github.workspace }}/build-macos/client/bin/*.lst ./dependencies/
-          # This lib is not cached and therefore is uploaded as a separate artifact
+          # kDrivecommonserver_vfs_mac lib is not cached and therefore is uploaded as a separate artifact
           find "${{ github.workspace }}/build-macos/client/bin" -name "*.dylib" \
             -not -name "kDrivecommonserver_vfs_mac.dylib" \
             -exec cp {} ./dependencies/ \;
