--- a/.github/workflows/build-and-run-extended-tests.yml
+++ b/.github/workflows/build-and-run-extended-tests.yml
@@ -69,23 +69,25 @@ jobs:
         shell: cmd
 
       - name: Execute tests
-        run: powershell ./infomaniak-build-tools/run-tests.ps1
-          # & "cov01.exe" "-1" # coverage on
-          # & "cov01.exe" "-s" # show status
+        run: |
+          & "cov01.exe" "-1" # coverage on
+          & "cov01.exe" "-s" # show status
 
-      # - name: Compute code coverage
-      #   run : |          
-      #     & "covselect.exe" "--add" 'exclude folder c:/'
-      #     & "covselect.exe" "--add" 'exclude folder ../'
-      #     & "covselect.exe" "--add" 'exclude folder 3rdparty/'
-      #     & "covselect.exe" "--add" 'exclude folder gui/'
-      #     & "cov01.exe" "-0" # coverage off
-      #     & "cov01.exe" "-s" # show status
-      #     & "covhtml.exe" "coverage_html"
+          ./infomaniak-build-tools/run-tests.ps1
 
-      # - name: Deactivate code coverage
-      #   run : "cov01.exe -0" # coverage off
-      #   if: always()
+      - name: Compute code coverage
+        run : |          
+          & "covselect.exe" "--add" 'exclude folder c:/'
+          & "covselect.exe" "--add" 'exclude folder ../'
+          & "covselect.exe" "--add" 'exclude folder 3rdparty/'
+          & "covselect.exe" "--add" 'exclude folder gui/'
+          & "cov01.exe" "-0" # coverage off
+          & "cov01.exe" "-s" # show status
+          & "covhtml.exe" "coverage_html"
+
+      - name: Deactivate code coverage
+        run : "cov01.exe -0" # coverage off
+        if: always()
 
       - name: Upload tests logs artifacts
         uses: actions/upload-artifact@v4
