feat(cmake): integrate Sentry crashpad handler in build process
Added Sentry package requirements and updated the crashpad handler retrieval method in CMakeLists.txt. This ensures that the correct crashpad handler is used during the build for both OSX and Windows platforms.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -252,11 +252,17 @@ if(BUILD_KDRIVE_OSX_BUNDLE)
     # Default Lite Sync app exclude list
     install(FILES litesync-exclude.lst DESTINATION ${KDRIVE_OSX_BUNDLE}/Contents/Resources/)
 
+    find_package(sentry REQUIRED)
+
     # Crashpad_handler
-    find_program(CRASHPAD_HANDLER_PROGRAM NAMES crashpad_handler NO_CACHE)
+    get_target_property(CRASHPAD_HANDLER_PROGRAM
+            sentry_crashpad::crashpad_handler
+            IMPORTED_LOCATION_RELWITHDEBINFO
+    )
     message(STATUS "crashpad_handler found in ${CRASHPAD_HANDLER_PROGRAM}")
     install(PROGRAMS ${CRASHPAD_HANDLER_PROGRAM} DESTINATION ${KDRIVE_OSX_BUNDLE}/Contents/MacOS/)
 elseif(BUILD_CLIENT)
+    find_package(sentry REQUIRED)
     if(WIN32)
         # NSIS
         configure_file(cmake/modules/NSIS.template.nsi.in ${CMAKE_CURRENT_BINARY_DIR}/NSIS.template.nsi @ONLY)
@@ -278,7 +284,10 @@ elseif(BUILD_CLIENT)
         install(FILES ${SENTRY_SHARED_LIBRARY} DESTINATION ${CMAKE_INSTALL_BINDIR})
 
         # Crashpad_handler
-        find_program(CRASHPAD_HANDLER_PROGRAM NAMES crashpad_handler NO_CACHE)
+        get_target_property(CRASHPAD_HANDLER_PROGRAM
+                sentry_crashpad::crashpad_handler
+                IMPORTED_LOCATION_RELWITHDEBINFO
+        )
         message(STATUS "crashpad_handler found in ${CRASHPAD_HANDLER_PROGRAM}")
         install(PROGRAMS ${CRASHPAD_HANDLER_PROGRAM} DESTINATION ${CMAKE_INSTALL_BINDIR})
     else()
@@ -298,7 +307,10 @@ elseif(BUILD_CLIENT)
         # Crashpad_handler
         message(STATUS "CMAKE_SYSTEM_PROCESSOR=${CMAKE_SYSTEM_PROCESSOR}")
         if(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
-            find_program(CRASHPAD_HANDLER_PROGRAM NAMES crashpad_handler NO_CACHE)
+            get_target_property(CRASHPAD_HANDLER_PROGRAM
+                    sentry_crashpad::crashpad_handler
+                    IMPORTED_LOCATION_RELWITHDEBINFO
+            )
             message(STATUS "crashpad_handler found in ${CRASHPAD_HANDLER_PROGRAM}")
             if(CMAKE_BUILD_TYPE STREQUAL "Debug")
                 file(COPY ${CRASHPAD_HANDLER_PROGRAM} DESTINATION ${CMAKE_BINARY_DIR}/bin)
