fix(sync-node-update): remove user-blacklisted nodes from the sync_node table when they are known to have been deleted remotely

--- a/test/libsyncengine/CMakeLists.txt
+++ b/test/libsyncengine/CMakeLists.txt
@@ -70,6 +70,7 @@ set(testsyncengine_SRCS
         syncpal/testoperationprocessor.h syncpal/testoperationprocessor.cpp
         # Requests
         requests/testexclusiontemplatecache.h requests/testexclusiontemplatecache.cpp
+        requests/testsyncnodecache.h requests/testsyncnodecache.cpp
 
         benchmark/benchmarkparalleljobs.h benchmark/benchmarkparalleljobs.cpp
 )
