fix(action.yml): update patterns for DLL file matching
Removed the 'lib' prefix from the xxhash and log4cplus DLL patterns to ensure correct matching in the environment setup.

--- a/.github/actions/build_windows/action.yml
+++ b/.github/actions/build_windows/action.yml
@@ -102,7 +102,7 @@ runs:
             cmd /c `"$($conanRunBat.FullName)`"  # modifie l'environnement du shell cmd
           }
           
-          $patterns = @("libxxhash*.dll", "liblog4cplus*.dll", "libssl*.dll", "libcrypto*.dll")
+          $patterns = @("xxhash*.dll", "log4cplus*.dll", "libssl*.dll", "libcrypto*.dll")
           $paths = $env:PATH -split ';' | Where-Object { $_ -like '*\.conan2\p*' }
           foreach ($dir in $paths) {
             if (Test-Path $dir) {
