feat(cmake): integrate Sentry library installation in CMake
Updated the CMake configuration to include the Sentry library installation. The script now checks for the existence of the Sentry DLL in the specified package folder and provides a fatal error if it is not found, ensuring proper integration of the Sentry library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -288,7 +288,7 @@ elseif(BUILD_CLIENT)
             set(SENTRY_SHARED_LIBRARY "${CANDIDATE_DLL}")
             message(STATUS "sentry dll found in ${SENTRY_SHARED_LIBRARY}")
         else()
-            message(FATAL_ERROR "sentry.dll not found in ${SENTRY_BIN_DIR}")
+            message(FATAL_ERROR "sentry.dll not found in ${_sentry_PACKAGE_FOLDER}")
         endif()
 
         # Crashpad_handler
