fix(cmake): update Sentry DLL path resolution in CMake
Modified the CMake configuration to correctly set the path for the Sentry DLL based on the build type. This change ensures that the correct DLL is referenced, improving the build process and error messaging when the DLL is not found.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -282,13 +282,12 @@ elseif(BUILD_CLIENT)
 
         # Sentry
         include(GeneralizeConanLibraryDirs)
-        get_package_folder("sentry") # This setup _sentry_PACKAGE_FOLDER
-        set(CANDIDATE_DLL "${_sentry_PACKAGE_FOLDER}/bin/sentry.dll")
+        set(CANDIDATE_DLL "${sentry_PACKAGE_FOLDER_${UPPER_BUILD_TYPE}}/bin/sentry.dll")
         if(EXISTS "${CANDIDATE_DLL}")
             set(SENTRY_SHARED_LIBRARY "${CANDIDATE_DLL}")
             message(STATUS "sentry dll found in ${SENTRY_SHARED_LIBRARY}")
         else()
-            message(FATAL_ERROR "sentry.dll not found in ${_sentry_PACKAGE_FOLDER}")
+            message(FATAL_ERROR "${CANDIDATE_DLL} not found")
         endif()
 
         # Crashpad_handler
