fix(cmake): update Sentry library path suffix for DLL resolution
Modified the CMake configuration to change the PATH_SUFFIXES for the Sentry library from '.' to 'bin' to ensure correct DLL resolution during the build process.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -285,7 +285,7 @@ elseif(BUILD_CLIENT)
         find_library(SENTRY_SHARED_LIBRARY
                 NAMES sentry
                 PATHS ${sentry_LIBRARIES}
-                PATH_SUFFIXES .
+                PATH_SUFFIXES "bin"
                 NO_DEFAULT_PATH
         )
         message(STATUS "sentry dll found in ${SENTRY_SHARED_LIBRARY}")
