--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -399,7 +399,7 @@ if(BUILD_KDRIVE_OSX_BUNDLE)
     # Crashpad_handler
     get_target_property(CRASHPAD_HANDLER_PROGRAM
             sentry_crashpad::crashpad_handler
-            IMPORTED_LOCATION_${UPPER_BUILD_TYPE}
+            IMPORTED_LOCATION_RELWITHDEBINFO
     )
     message(STATUS "crashpad_handler exe found in ${CRASHPAD_HANDLER_PROGRAM}")
     install(PROGRAMS ${CRASHPAD_HANDLER_PROGRAM} DESTINATION ${BIN_OUTPUT_DIRECTORY})
