--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -279,8 +279,14 @@ elseif(BUILD_CLIENT)
         install(FILES ${VFS_SHARED_LIBRARY} DESTINATION ${CMAKE_INSTALL_BINDIR})
 
         # Sentry
-        get_target_property(SENTRY_SHARED_LIBRARY                sentry::sentry
+        get_target_property(SENTRY_LIB_DIR sentry::sentry
                 INTERFACE_LINK_DIRECTORIES
+        )
+        find_library(SENTRY_SHARED_LIBRARY
+                NAMES sentry
+                PATHS ${SENTRY_LIB_DIR}
+                PATH_SUFFIXES .
+                NO_DEFAULT_PATH
         )
         message(STATUS "sentry dll found in ${SENTRY_SHARED_LIBRARY}")
         install(FILES ${SENTRY_SHARED_LIBRARY} DESTINATION ${CMAKE_INSTALL_BINDIR})
